# native-ralph

./: .aiignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  README.md  error-documentation.md  lessons-learned.md  pyproject.toml
.claude/commands/: install.md  prime.md  reset-state.md
.github/workflows/: test.yml
adk_agents/: __init__.py  __main__.py  agent.py  config.py  runner.py
adk_agents/agents/: __init__.py  analyzer_agent.py  fixer_agent.py  reporter_agent.py  screenshot_agent.py  validator_agent.py
adk_agents/tools/: __init__.py  file_tools.py  loop_control.py  playwright_tools.py
browser-tests/: README.md  package.json  playwright.config.js
browser-tests/scripts/: screenshot.js  validate.js
browser-tests/tests/: example.spec.js
commands/: adk-loop.md  browser-loop.md
demo/: ralph-loop-demo.tape  simulate-loop.sh
docs/: primitive-comparison.md
scripts/: run-adk-pipeline.sh  setup-ralph-loop.sh
skill/: SKILL.md
skill/templates/: auto-mode-until-done.md  cowork-oneshot-deep-eval.md  cowork-recurring-maintenance.md  loop-dynamic-self-paced.md  loop-interval-poll.md
test/: setup-ralph-loop.bats  stop-hook.bats  test_helper.bash
tests/: conftest.py  test_agents.py  test_tools.py
